--- a/package.json
+++ b/package.json
@@ -14,18 +14,18 @@
     "@aws-cdk/assert": "^1.87.0",
     "@types/jest": "^26.0.20",
     "@types/node": "14.14.22",
+    "aws-cdk": "^1.87.0",
     "jest": "^26.6.3",
     "ts-jest": "^26.4.4",
-    "aws-cdk": "^1.87.0",
     "ts-node": "^9.1.1",
-    "typescript": "~4.1.3"
+    "typescript": "^4.1.3"
   },
   "dependencies": {
     "@aws-cdk/aws-dynamodb": "^1.87.0",
     "@aws-cdk/aws-iam": "^1.87.0",
     "@aws-cdk/aws-lambda": "^1.87.0",
     "@aws-cdk/aws-lambda-event-sources": "^1.87.0",
-    "@aws-cdk/aws-s3": "^1.87.0",
+    "@aws-cdk/aws-s3": "^1.88.0",
     "@aws-cdk/core": "^1.87.0",
     "source-map-support": "^0.5.19"
   }
